unpackaged/main/default/objects/Valor_UMA__c/Valor_UMA__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Valor UMA</label>
</CustomObject>