unpackaged/main/default/objects/Valor_UMA__c/fields/Equivalencia_Pesos__c.field-meta.xml
<CustomField>
    <fullName>Equivalencia_Pesos__c</fullName>
    <label>Equivalencia en Pesos</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>