unpackaged/main/default/objects/Valor_UMA__c/fields/Limite_UMA__c.field-meta.xml
<CustomField>
    <fullName>Limite_UMA__c</fullName>
    <label>Límite UMA</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>