unpackaged/main/default/objects/Valor_UMA__c/fields/Meses__c.field-meta.xml
<CustomField>
    <fullName>Meses__c</fullName>
    <label>Meses</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>